<?xml version="1.0" encoding="utf-8"?>
<!--Using linear layout with vertical orientation and center gravity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--ImageView used for showing pictures along with questions-->

    <!--TextView used for showing questions on screen-->

    <ImageView
        android:id="@+id/myimage"
        android:layout_width="wrap_content"
        android:layout_height="355dp"
        android:background="@drawable/all"
        android:scaleType="centerCrop"
        android:src="@drawable/nose" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/a"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <!--Using another LinearLayout for showing buttons
        in horizontal orientation-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--TrueButton-->
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:backgroundTint="#5BD91B"
            android:text="@string/true_text"
            android:textSize="20sp" />

        <!--FalseButton-->
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#E33328"
            android:text="@string/false_text"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--PreviousButton-->
        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:backgroundTint="#DFD2D1"
            android:src="@drawable/back"
            android:text="@string/prev_text" />

        <!--NextButton-->
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="181dp"
            android:layout_height="101dp"
            android:backgroundTint="#DFD2D1"
            android:src="@drawable/forward"
            android:text="@string/next_text" />

    </LinearLayout>
</LinearLayout>